--- a/package.json
+++ b/package.json
@@ -19,18 +19,22 @@
     "build": "tsc",
     "postbuild": "ts-node ./build.ts && cp LICENSE README.md dist",
     "lint": "tslint -p tsconfig.json -c tslint.json",
-    "test": "mocha --require ts-node/register --config .config/.mocharc.js --project tsconfig.json src/**/*.spec.ts",
-    "test:watch": "mocha --require ts-node/register --config .config/.mocharc.js --project tsconfig.json --watch src/**/*.spec.ts"
+    "pretest": "rimraf coverage .nyc_output",
+    "test": "nyc --nycrc-path .config/nyc.config.js mocha --config .config/mocha.config.js src/**/*.spec.ts",
+    "posttest": "nyc --nycrc-path .config/nyc.config.js --reporter text report && codecov -f coverage/*.json",
+    "test:watch": "mocha --config .config/mocha.config.js  --watch src/**/*.spec.ts"
   },
   "devDependencies": {
     "@types/chai": "4.2.12",
     "@types/mocha": "8.0.0",
     "@types/node": "10.17.8",
     "chai": "4.2.0",
+    "codecov": "3.7.2",
     "copy": "0.3.2",
     "mocha": "8.0.1",
+    "nyc": "15.1.0",
     "rimraf": "3.0.0",
-    "ts-node": "^8.10.2",
+    "ts-node": "8.10.2",
     "tslint": "6.1.2",
     "tslint-config-standard": "9.0.0",
     "typescript": "3.9.2"
